--- a/git.html
+++ b/git.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+theme: jekyll-theme-minimal
 </body>
 </html>
