--- a/git.html
+++ b/git.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Моя Игра</title>
+</head>
 <body>
-theme: jekyll-theme-minimal
+    <h1>Добро пожаловать в мою игру!</h1>
+    <p>Это пример веб-страницы для вашей игры на GitHub.</p>
 </body>
 </html>
