--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
    <head>
        <meta charset="UTF-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-       <title>Моя Игра</title>
+       <title>Euro Car</title>
    </head>
    <body>
-       <h1>Добро пожаловать в мою игру!</h1>
-       <p>Это пример веб-страницы для вашей игры на GitHub.</p>
+       <h1></h1>
+       <p>Ухты загатовка.</p>
    </body>
    </html>
