--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
        <title>Euro Car</title>
    </head>
    <body>
-       <h1></h1>
+       <h1>Euro Car</h1>
        <p>Ухты загатовка.</p>
    </body>
    </html>
